--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -5,7 +5,7 @@
 #oracle database settings
 jdbc.type=oracle
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:TEST
+jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 jdbc.username=jeesite
 jdbc.password=123456
 
